Revision history for Perl extension FCGI-Engine

0.15 Sat. April 17, 2010
    - fixing Plack support to work with the latest
      Plack version
      - changed Plack::Server:: to Plack::Handler::
          - Plack::Server:: is deprecated and will
            be removed in subsequent releases
          - adjusted tests to use Plack::Handler::
      - updated FCGI::Engine::PSGI to more closely
        follow what is in Plack::Handler::FCGI

0.14 Mon. Feb. 22, 2010
    - updating copyright on all files
    - updating some test files to require YAML::XS since
      YAML and YAML::Syck are not the suggested YAML parser
      for Config::Any
      - thanks to Justin "arcanez" Hunter

0.13 Thurs. Dec. 31, 2009
    - fixing test files that were causing false
      CPAN Tester failings (Jay Shirley)
    - pushed all dependencies up to the latest
      versions, might also help some odd CPAN
      Tester failures

0.12 Tues. Dec. 29. 2009
    + FCGI::Engine::PSGI
      - run PSGI applications using FCGI::Engine
        - added tests for this

    + FCGI::Engine::Core
      - base class for FCGI::Engine flavors

    * FCGI::Engine
      - refactored to use FCGI::Engine::Core

    + Plack::Server::FCGI::Engine
    + Plack::Server::FCGI::Engine::ProcManager
      - subclasses to make it easier to use the
        FCGI::Engine::ProcManager with your Plack
        based application
        - added tests for this

    * FCGI::Engine::Manager::Server::Plackup
      - this now uses Plack::Server::FCGI::Engine
        by default (can be overriden with the
        'server_type' option)

0.11 Thurs. Dec. 10, 2009
    + FCGI::Engine::Manager::Server::Plackup
      - added support for running Plack based apps
        using the FCGI::Engine::Manager controls
        - added tests for this
      - NOTE: we do not depend on Plack, you are
        expected to have it installed if you use
        this module.

    * FCGI::Engine
      - adding some more PATH_INFO and SCRIPT_NAME